# net

./: .gitignore  .gitmodules  .npmignore  README.md  bean.sch  board_disp.brd  board_power.brd  changelog.txt  custom.lbr  eagle.epf  eagle.lbr  global.json  home.server.sln  mcu_board.brd  mcu_board.sch  package.json  protocol.txt  relay-mod.lbr  start.bat
Admin/: Admin.UI.csproj  Admin.csproj  App.xaml.cs  Connection.cs  MainWindow.xaml  MainWindow.xaml.cs  RenamingNode.cs  TcpConnection.cs  UiCommand.cs  UiNode.cs
Common/: Common.csproj
Security.Plugin/: AlarmStatus.cs  Security.Plugin.csproj  SecurityPlugin.cs
Server/: ConsoleLogger.cs  Program.cs  Server.csproj  netServer.csproj
bean_dip/: eagle.epf
doc/: mcumaster.md  protocol.md
fw/: 23k256.c  23k256.h  app.lkr  appio.c  appio.h  audioSink.c  audioSink.h  bean.mcp  bean.mcw  bus.h  bus_client.c  bus_server.c  cm1602.c  cm1602.h  dcf77.c  dcf77.h  displaySink.c  displaySink.h  flasher.c  fuses.c  fuses.h  guid.h  halfduplex.c  halfduplex.h  ip_client.c  ip_client.h  ip_protocol.c  ip_protocol.h  lib8.c  main.c  pch.h  persistence.c  persistence.h  persistence2.c  persistence3.c  protocol.c  protocol.h  readme.txt  rs485.c  rs485.h  (+12 more)
garden/: board_disp.brd  board_disp.sch  board_power.brd  display.c  display.h  eagle.epf  eeprom.c  eeprom.h  gardenSink.c  inputs.c  inputs.h  main.c  outputs.c  outputs.h  program.c  program.h  (+5 more)
samples/netmaster/: CMakeLists.txt  README.md  main.c  sinks.c
samples/netmaster/hardware/: fuses_raspbian.h
samples/netmaster/nbproject/: .gitignore  configurations.xml
(+1387 files in other folders)
